--- a/GameOfLife 2/index.html
+++ b/GameOfLife 2/index.html
@@ -15,11 +15,18 @@
 <body>
 
 
-    <button class = "grass" onclick="AddGrass()", style="background-color:green">Add Grass</button><br>
-    <button class = "grassEater" onclick="AddGrassEater()", style="background-color: yellow;">Add GrassEater</button><br>
-    <button class = "predator" onclick="AddPredator()", style="background-color: red;">Add Predator</button><br>
-    <button class = "fire" onclick="AddFire()", style="background-color: orangered;">Add Fire</button><br>
-    <button class = "water" onclick="AddWater()", style="background-color:rgb(0, 119, 255);">Add Water</button><br>
+    <button class="button-3" role="button" onclick="AddGrass()">Add Grass</button><br>
+    <button class="button-3" style="background-color: yellow; color: black;" role="button" onclick="AddGrassEater() ">Add GrassEater</button><br>
+    <button class="button-3" style="background-color: red; color: white;" role="button" onclick="AddPredator() ">Add Predator</button><br>
+    <button class="button-3" style="background-color:orange; color: black;" role="button" onclick="AddFire() ">Add Fire</button><br>
+    <button class="button-3" style="background-color: rgb(32, 12, 216); color:white;" role="button" onclick="AddWater() ">Add Water</button><br><br><br><br>
+
+    <div class="weather-buttons">
+        <button class="button-3"onclick="Spring()" class="button-weather" style="background-color: rgb(219, 23, 187); color:black">Spring</button>
+        <button class="button-3"onclick="Summer()" class="button-weather" style="background-color: green; color:black">Summer</button><br>
+        <button class="button-3"onclick="Autumn()" class="button-weather" style="background-color:rgb(224, 170, 20); color:black">Autumn</button>
+        <button class="button-3"onclick="Winter()" class="button-weather" style="background-color: white; color:black">Winter</button><br>
+    </div>
 
 </body>
 </html>
