--- a/GameOfLife 2/index.html
+++ b/GameOfLife 2/index.html
@@ -19,13 +19,14 @@
     <button class="button-3" style="background-color: yellow; color: black;" role="button" onclick="AddGrassEater() ">Add GrassEater</button><br>
     <button class="button-3" style="background-color: red; color: white;" role="button" onclick="AddPredator() ">Add Predator</button><br>
     <button class="button-3" style="background-color:orange; color: black;" role="button" onclick="AddFire() ">Add Fire</button><br>
-    <button class="button-3" style="background-color: rgb(32, 12, 216); color:white;" role="button" onclick="AddWater() ">Add Water</button><br><br><br><br>
-
-    <div class="weather-buttons">
-        <button class="button-3"onclick="Spring()" class="button-weather" style="background-color: rgb(219, 23, 187); color:black">Spring</button>
-        <button class="button-3"onclick="Summer()" class="button-weather" style="background-color: green; color:black">Summer</button><br>
-        <button class="button-3"onclick="Autumn()" class="button-weather" style="background-color:rgb(224, 170, 20); color:black">Autumn</button>
-        <button class="button-3"onclick="Winter()" class="button-weather" style="background-color: white; color:black">Winter</button><br>
+    <button class="button-3" style="background-color: rgb(32, 12, 216); color:white;" role="button" onclick="AddWater() ">Add Water</button><br>
+    <button class="button-3" style="background-color: rgb(24, 196, 153); color: white;" role="button" onclick="KillAll() ">KillAll</button><br><br>
+    <div>
+      
+    <button class="button-85" role="button" onclick="Spring()">Spring </button><br><br>
+    <button class="button-85" role="button" onclick="Summer()">Summer</button><br><br>
+    <button class="button-85" role="button" onclick="Autumn()">Autumn</button><br><br>
+    <button class="button-85" role="button" onclick="Winter()" >Winter</button><br><br>
     </div>
 
 </body>
